# pixi-mise

./: .gitignore  Cargo.toml  README.md  pixi.toml
.cursor/rules/: keep-docs-updated.mdc
.github/workflows/: ci.yml
crates/pixi-mise/: Cargo.toml
crates/pixi-mise-assets/: Cargo.toml
crates/pixi-mise-assets/src/: lib.rs
crates/pixi-mise-core/: Cargo.toml
crates/pixi-mise-core/src/: config.rs  extract.rs  install.rs  lib.rs  lockfile.rs  registry.rs  resolve.rs  version.rs
crates/pixi-mise-github/: Cargo.toml
crates/pixi-mise-github/src/: lib.rs
crates/pixi-mise-pixi/: Cargo.toml
crates/pixi-mise-pixi/src/: lib.rs
crates/pixi-mise/src/: main.rs
docs/: DESIGN.md
