[workspace]
resolver = "2"
members = [
    "crates/pixi-mise-core",
    "crates/pixi-mise-github",
    "crates/pixi-mise-assets",
    "crates/pixi-mise-pixi",
]
default-members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/amirhosseindavoody/pixi-mise"
authors = ["Amirhossein Davoody <amirhossein.davoody@gmail.com>"]
rust-version = "1.97"

[workspace.dependencies]
pixi-mise-assets = { path = "crates/pixi-mise-assets" }
pixi-mise-core = { path = "crates/pixi-mise-core" }
pixi-mise-github = { path = "crates/pixi-mise-github" }
pixi-mise-pixi = { path = "crates/pixi-mise-pixi" }

bzip2 = "0.5"
clap = { version = "4.5", features = ["derive", "env"] }
flate2 = "1.1"
miette = { version = "7.6", features = ["fancy"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xz2 = "0.1"
zip = { version = "2.3", default-features = false, features = ["deflate"] }

[package]
name = "pixi-mise"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Install GitHub release binaries into Pixi environments (Pixi extension: pixi mise)"
readme = "README.md"

[[bin]]
name = "pixi-mise"
path = "crates/pixi-mise/src/main.rs"

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
pixi-mise-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
