[package]
name = "pixi-mise-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Mise-inspired OS/arch asset scoring for GitHub release binaries"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
