[package]
name = "pixi-mise-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Config, types, resolve, and install orchestration for pixi-mise"

[dependencies]
bzip2 = { workspace = true }
flate2 = { workspace = true }
pixi-mise-assets = { workspace = true }
pixi-mise-github = { workspace = true }
pixi-mise-pixi = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
xz2 = { workspace = true }
zip = { workspace = true }
