[package]
name = "pixi-mise-github"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "GitHub API client and release listing for pixi-mise"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
